# ESP_TIME_NTP

./: .gitignore  BK_formatter.xml  README.md
ESP_NTP/: .cproject  .project  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
ESP_NTP/main/: CMakeLists.txt  Kconfig.projbuild  Kconfig.projbuild.new  alarms_app.c  alarms_app.h  app_nvs.c  app_nvs.h  board_config.h  http_server.c  http_server.h  main.c  mqtt_bk.c  mqtt_bk.h  rgb_led.c  rgb_led.h  sntp_time_sync.c  sntp_time_sync.h  tasks_common.c  tasks_common.h  temp_rh_meas.c  temp_rh_meas.h  wifi_app.c  wifi_app.h  wifi_reset_button.c  wifi_reset_button.h
ESP_NTP/main/UART/: uart_bk.h  uart_bk_WORKING.c
ESP_NTP/main/webpage/: app.css  app.js  index.html
ESP_NTP/main/webpage/test/: app.css  app.js  index.html
